fix(tui):sync streaming behavior
